--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -26,7 +26,7 @@
 				</div>
 
 				<p class="text-center mb-4" id="form-title" th:class="title"></p>
-				<p class="text-center mb-4 title-format"></p>
+				<p class="text-center mb-4 title-format">Log In</p>
 				<form th:action="@{/login}" th:method="post" class="w-100 mx-auto">
 					<div class="w-100 mb-4">
 						<input id="username" name="username" type="text" class="form-control w-100 shadow-none" autocomplete="off" placeholder="Username">
