--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -123,13 +123,13 @@
 					<img src="/imgs/black-logo.png" class="black-logo">
 				</div>
 				<div class="socials">
-					<i class="fab fa-instagram"></i>
-					<i class="fab fa-linkedin-in"></i>
-					<i class="fab fa-facebook-f"></i>
-					<i class="fab fa-twitter"></i>
+					<span class="fab fa-instagram"></span>
+					<span class="fab fa-linkedin-in"></span>
+					<span class="fab fa-facebook-f"></span>
+					<span class="fab fa-twitter"></span>
 				</div>
 				<div class="address">
-					<p>600 Navarro Street,<br> San Antonio, TX 78209</p>
+					<p>600 Navarro Street,<br>San Antonio, TX 78209</p>
 				</div>
 			</div>
 
@@ -142,7 +142,6 @@
 				<div class="subscribe">
 					<form>
 <!--					<form class="subscribe-form" th:action="@{/about_us/subscribe}" method="post">-->
-						<label for="footer_email" class="footer_email">Subscribe</label>
 						<input name="email" type="email" placeholder="Email Address" id="footer_email" class="email" size="40">
 						<button type="submit" class="btn subscribe_btn" style="border:none">Subscribe</button>
 					</form>
