--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -115,5 +115,7 @@ textarea{
     #mobile_subscribe    {
             vertical-align:middle;
         }
-
+    .venuedBlack {
+        margin-bottom: 10px;
+    }
 }
