--- a/src/main/resources/templates/users/signup.html
+++ b/src/main/resources/templates/users/signup.html
@@ -29,7 +29,7 @@
                     <div class="w-100">
                         <input type="submit" value="Sign Up" class="form-control shadow-none" id="submit-btn">
                     </div>
-                    <div>Already have an account?<a th:href="@{/users/login}">&nbsp;Login</a></div>
+                    <div>Already have an account?<a th:href="@{/login}">&nbsp;Login</a></div>
                 </form>
             </div>
         </main>
